# imap-listener

./: Cargo.toml  allowed_people.json  triggering_subjects.json
src/: main.rs
