[package]
name = "imap-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
imap = "3.0.0-alpha.6"
email = "0.0.21"
chrono = "0.4.10"
edit-distance = "2.1.0"
serde_json = "1.0.59"
log = "0.4"
simple_logger = "2.1.0"
